creata la griglia di partenza in js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <title>Campo Minato</title>
 </head>
 <body>
+    <!-- Header -->
+    <header class=" header flex">
+        <div class="flex hd-left align-center">
+            <img id="logo" src="img/Logo.png" alt="logo">
+            <h1>Campo Minato</h1>
+        </div>
+        <div class="hd-right flex align-center">
+            <button id="btn">Play</button>
+        </div>
+    </header>
+    <!-- /Header -->
+    <!-- Main-field -->
+    <main>
+        <div class="container flex align-center ">
+            <div class="grid flex">
+
+            </div>
+        </div>
+    </main>
+    <!-- /Main-field -->
+    <!-- Footer -->
+    <footer>
+        <p id="sign">Made with &hearts; by <a href="">Boolean</a></p>
+    </footer>
+    <!-- /Footer -->
 
 
 
