con l'aiuto della correzione ho terminato la base

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <h1>Campo Minato</h1>
         </div>
         <div class="hd-right flex align-center">
+            <!-- <label for="level">Difficoltà</label> -->
+            <!-- <select name="level" id="level">
+                <option value="1">Easy</option>
+                <option value="2">Hard</option>
+                <option value="3">Crazy                       </option>
+            </select> -->
+
             <button id="btn">Play</button>
         </div>
     </header>
@@ -23,7 +30,10 @@
     <!-- Main-field -->
     <main>
         <div class="container flex align-center ">
-            <div class="grid flex">
+            <div id="grid" class="grid flex">
+                <!-- <div class="box">
+                    <span>1</span>
+                </div> -->
 
             </div>
         </div>
